--- a/glide.yaml
+++ b/glide.yaml
@@ -10,6 +10,7 @@ import:
   - client
 - package: github.com/go-openapi/strfmt
 - package: github.com/netlify/open-api
+  version: use_proper_path
   subpackages:
   - go/models
   - go/porcelain
